added filtering by categories

--- a/photo_album/base/templates/base/index.html
+++ b/photo_album/base/templates/base/index.html
@@ -25,9 +25,13 @@
                           Categories
                           </div>
                               <ul class="list-group list-group-flush">
-                                  <li class="list-group-item">All</li>
+                                  <li class="list-group-item">
+                                      <a href="{% url 'index' %}">All</a>
+                                  </li>
                                 {% for category in categories %}
-                                  <li class="list-group-item">{{ category }}</li>
+                                  <li class="list-group-item">
+                                      <a href="{% url 'index' %}?category={{ category.name }}">{{ category.name }}</a>
+                                  </li>
                                 {% endfor %}
 
                                 <a class="btn btn-dark btn-block btn-sm m-1" href="{% url 'add_photo' %}">Add Photo</a>
